# audiobooker

./: .gitignore  README.md  ebook.epub  ebook_audiobook_converter.py  fish_tts_wrapper.py  generate_kokoro_reference_voices.py  keets.epub  pyproject.toml  run_audiobook_pipeline.sh
audiobooker/: __main__.py  backends.py  casting.py  cli.py  constants.py  llm.py  models.py  parsing.py  rendering.py  speaker_cleanup.py  utils.py  voices.py
tools/: generate_kokoro_reference_voices.py
