[project]
name = "audiobooker"
version = "0.1.0"
description = "Convert EPUB books into multi-voice audiobooks with AI-powered speaker attribution"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "lxml",
    "soundfile",
    "numpy<2",
    "kokoro",
    "TTS",
    "transformers==4.41.2",
    "tokenizers==0.19.1",
    "huggingface-hub==0.23.5",
    "setuptools<82",
]

[project.scripts]
audiobooker = "audiobooker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "managed"
